--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -118,6 +118,13 @@
 }
 
 @media (max-width: 768px) {
+    .contact-section{
+        padding-left: 60px; /* Adjusted to make room for the navbar */
+        padding-top: 20px; /* Adjust if needed to align content vertically */
+        padding-right: 10px; /* Ensure right padding is sufficient */
+        padding-bottom: 20px; /* Adjust if needed */
+    }
+
     .contact-content {
         flex-direction: column;
     }
